added identity, jwt and db to project

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "Default Connection": "Data Source=cryptotrain.db"
+  },
+  "TokenKey": "a key, that u will never guess"
 }
